added jupyter notebook

--- a/workshops/data_science/Graphs with Python.ipynb
+++ b/workshops/data_science/Graphs with Python.ipynb
@@ -151,7 +151,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x1e375f35fd0>]"
+       "[<matplotlib.lines.Line2D at 0x1aea5ef3ef0>]"
       ]
      },
      "execution_count": 3,
@@ -189,7 +189,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x1e3762e5cc0>]"
+       "[<matplotlib.lines.Line2D at 0x1aea6075dd8>]"
       ]
      },
      "execution_count": 4,
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -356,8 +356,8 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x1e3763ac588>,\n",
-       " <matplotlib.lines.Line2D at 0x1e3763d21d0>]"
+       "[<matplotlib.lines.Line2D at 0x1c031719cf8>,\n",
+       " <matplotlib.lines.Line2D at 0x1c031742da0>]"
       ]
      },
      "execution_count": 9,
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,7 +402,7 @@
     "    ax1.tick_params('x', rotation=45)\n",
     "    #ax1.set_title(\"Hudson River Discharge vs. Precipitation, Ploughskeepie, NY Jan 2019\")\n",
     "\n",
-    "    ax2 = ax1.twinx() # duplicates the axes so the two variables plot on the same figure\n",
+    "    ax2 = ax1.twinx() # duplicates the axes so the two variables plot on the same figure (but with different scales)\n",
     "    ax2.plot(frame[\"DATE\"], frame[\"DISCHARGE (cubic feet/sec)\"], 'r-')\n",
     "    ax2.set_ylabel(\"Discharge (cubic feet/sec)\", color='#e57979')\n",
     "    ax2.tick_params('y', colors='#e57979')\n",
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
